email eisaaaru@eisaaaru@.ee

--- a/config.toml
+++ b/config.toml
@@ -9,4 +9,4 @@ taxonomies = {}
 [params]
   description = "Podcast tehnoloogiast ja inimeseks olemisest"
   author = "Henno ja Siim"
-  email = "eisaaaru@p6drad-teel.net"
+  email = "eisaaaru@eisaaaru.ee"
